@@ -9,6 +9,9 @@ Malathi, Vladimir Avdonin and Eric Le Lay for contributing to this release.
 
 {{{ Bug fixes
 
+- Fix a case where a NPE occurs when removing a plugin
+  (#3557441 Matthieu Casanova)
+
 - Filter not synchronizing in search dialog when
   "All buffers" is selected. (bug #1646584, patch #3549905 Eric Le Lay)
 
